# SpaceShooter

./: .clang-format  .gitignore  BeamPool.cpp  BeamPool.h  BeamProjectile.cpp  BeamProjectile.h  CMakeLists.txt  Entity.cpp  Entity.h  Event.h  Game.cpp  Game.h  Player.cpp  Player.h  README.md  SpriteRenderer.cpp  SpriteRenderer.h  Subject.cpp  main.cpp
src/: main.cpp
src/buffs/: ActiveBuff.cpp  ActiveBuff.h  HealthBuff.cpp  HealthBuff.h  ShieldBuff.cpp  ShieldBuff.h  SpeedBuff.cpp  SpeedBuff.h
src/components/: SpriteRenderer.cpp
src/core/: CollisionManager.cpp  CollisionManager.h  Game.cpp  Game.h  PoolManager.cpp  PoolManager.h  SoundManager.cpp  SoundManager.h  TextureManager.cpp  TextureManager.h  WavesManager.cpp  WavesManager.h
src/core/events/: Event.h  Observer.h  Subject.cpp  Subject.h
src/entities/: Damageable.h  Entity.cpp  Entity.h  EntityPool.h  IEntityPool.h  Player.cpp  Player.h
src/entities/effects/: Explosion.cpp  Explosion.h  Sparkle.cpp  Sparkle.h
src/entities/enemies/: CandyEnemy.cpp  CandyEnemy.h  KamikazeEnemy.cpp  KamikazeEnemy.h  ShellEnemy.cpp  ShellEnemy.h
src/entities/enemies/states/: CandyAdvancingState.cpp  CandyAdvancingState.h  CandyEnemyState.cpp  CandyEnemyState.h  CandyPausingState.cpp  CandyPausingState.h  CandyShootingState.cpp  CandyShootingState.h  CandyTargetingState.cpp  CandyTargetingState.h  KamikazeAdvancingState.cpp  KamikazeAdvancingState.h  KamikazeDyingState.cpp  KamikazeDyingState.h  KamikazeEnemyState.cpp  KamikazeEnemyState.h  KamikazeTargetingState.cpp  KamikazeTargetingState.h  ShellAdvancingState.cpp  ShellAdvancingState.h  ShellEnemyState.h  ShellTrailingState.cpp  ShellTrailingState.h
src/entities/pickups/: RandomPickup.cpp  RandomPickup.h
src/entities/powerups/: RandomPowerup.cpp  RandomPowerup.h
src/entities/projectiles/: BeamProjectile.cpp  BeamProjectile.h  CircleProjectile.cpp  CircleProjectile.h  EnemyMissile.cpp  EnemyMissile.h  EnemyProjectile.cpp  EnemyProjectile.h  PlayerMissile.cpp  PlayerMissile.h  SquareProjectile.cpp  SquareProjectile.h
src/items/: CircleItem.cpp  CircleItem.h  Item.cpp  Item.h  MissileItem.cpp  MissileItem.h  SquareItem.cpp  SquareItem.h
src/ui/: DigitDisplay.cpp  DigitDisplay.h  Display.cpp  Display.h  GameOverDisplay.cpp  GameOverDisplay.h  GameStartDisplay.cpp  GameStartDisplay.h  HealthBarDisplay.cpp  HealthBarDisplay.h  HeldItemDisplay.cpp  HeldItemDisplay.h  ScoreUI.cpp  ScoreUI.h
src/utils/: MathUtils.cpp  MathUtils.h
